[refact] to use map

--- a/CRA/CRA.vcxproj.filters
+++ b/CRA/CRA.vcxproj.filters
@@ -22,4 +22,7 @@
   <ItemGroup>
     <Text Include="keyword_weekday_500.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
