--- a/CRA/CRA.vcxproj
+++ b/CRA/CRA.vcxproj
@@ -124,12 +124,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mission1\corrector_fun.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="keyword_weekday_500.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mission1\corrector_fun.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
