--- a/CRA/CRA.vcxproj
+++ b/CRA/CRA.vcxproj
@@ -126,6 +126,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mission1\corrector_fun.cpp" />
     <ClCompile Include="mission2\Corrector.cpp" />
+    <ClCompile Include="mission2\LevenshteinAlgorithm.cpp" />
+    <ClCompile Include="mission2\SimilarAlgorithmFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="keyword_weekday_500.txt" />
@@ -136,6 +138,9 @@
   <ItemGroup>
     <ClInclude Include="mission1\corrector_fun.h" />
     <ClInclude Include="mission2\Corrector.h" />
+    <ClInclude Include="mission2\LevenshteinAlgorithm.h" />
+    <ClInclude Include="mission2\SimilarAlgorithm.h" />
+    <ClInclude Include="mission2\SimilarAlgorithmFactory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
