--- a/CRA/CRA.vcxproj.filters
+++ b/CRA/CRA.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="mission2\SimilarAlgorithmFactory.cpp">
       <Filter>소스 파일\mission2</Filter>
     </ClCompile>
+    <ClCompile Include="mission2\CorrectorUt.cpp">
+      <Filter>헤더 파일\mission2</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="keyword_weekday_500.txt" />
